<resources>

    <string name="app_name">Fit Track App</string>

    <!-- Meal Data -->
    <string name="calories">Calories</string>
    <string name="calories_kcal">Calories</string>
    <string name="fat">Fat</string>
    <string name="fat_g">Fat</string>
    <string name="fat_sat">Saturated fats</string>
    <string name="fat_sat_g">Saturated fats</string>
    <string name="carbs">Carbohydrates</string>
    <string name="carbs_g">Carbohydrates</string>
    <string name="sugar">Sugar</string>
    <string name="sugar_g">Sugar</string>
    <string name="protein">Protein</string>
    <string name="protein_g">Protein</string>
    <color name="trans">#00000000</color>

    <string name="salt">Salt</string>
    <string name="salt_g">Salt</string>
    <string name="fiber">Fiber</string>
    <string name="fiber_g">Fiber</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="cholesterol_mg">Cholesterol</string>
    <string name="creatine_g">Creatine</string>
    <string name="creatine">Creatine (g)</string>
    <string name="ca">Calcium</string>
    <string name="ca_mg">Calcium (mg)</string>
    <string name="fe">Iron</string>
    <string name="fe_mg">Iron (mg)</string>
    <string name="ka">Potassium</string>
    <string name="ka_mg">Potassium (mg)</string>
    <string name="mg">Magnesium</string>
    <string name="mg_mg">Magnesium (mg)</string>
    <string name="mn">Manganese</string>
    <string name="mn_mg">Manganese (mg)</string>
    <string name="na">Sodium</string>
    <string name="na_mg">Sodium (mg)</string>
    <string name="phosphorus">Phosphorus</string>
    <string name="phosphorus_mg">Phosphorus (mg)</string>
    <string name="zn">Zinc</string>
    <string name="zn_mg">Zinc (mg)</string>
    <string name="vit_a">Vitamin A</string>
    <string name="vit_a_mg">Vitamin A (mg)</string>
    <string name="vit_b1">Vitamin B1</string>
    <string name="vit_b1_mg">Vitamin B1 (mg)</string>
    <string name="vit_b2">Vitamin B2</string>
    <string name="vit_b2_mg">Vitamin B2 (mg)</string>
    <string name="vit_b3">Vitamin B3</string>
    <string name="vit_b3_mg">Vitamin B3 (mg)</string>
    <string name="vit_b5">Vitamin B5</string>
    <string name="vit_b5_mg">Vitamin B5 (mg)</string>
    <string name="vit_b6">Vitamin B6</string>
    <string name="vit_b6_mg">Vitamin B6 (mg)</string>
    <string name="vit_b7">Vitamin B7</string>
    <string name="vit_b7_mg">Vitamin B7 (mg)</string>
    <string name="vit_b11">Vitamin B11</string>
    <string name="vit_b11_mg">Vitamin B11 (mg)</string>
    <string name="vit_b12">Vitamin B12</string>
    <string name="vit_b12_mg">Vitamin B12 (mg)</string>
    <string name="vit_c">Vitamin C</string>
    <string name="vit_c_mg">Vitamin C (mg)</string>
    <string name="vit_e">Vitamin E</string>
    <string name="vit_e_mg">Vitamin E (mg)</string>
    <string name="vit_k">Vitamin K</string>
    <string name="vit_k_mg">Vitamin K (mg)</string>
    <string name="vit_h">Vitamin H</string>
    <string name="vit_h_mg">Vitamin H (mg)</string>

    <!-- Dashboard Nutrition -->
    <string name="dn_header_01">Today\'s Overview</string>
    <string name="dn_header_02">Details</string>
    <string name="dn_button_add">Add Meal</string>
    <string name="dn_button_edit">Today\'s Meals</string>

    <!-- UI -->
    <string name="button_text_back">Back</string>
    <string name="button_text_save">Save</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="button_add_new_meal">Add New Meal</string>
    <string name="title_meal_name">Meal Name</string>
    <string name="title_name">Name</string>
    <string name="title_category">Category</string>
    <string name="title_general_data">General Data</string>
    <string name="title_details">Details</string>
    <string name="title_select_plan">Select Workout Plan</string>
    <string name="hint_no_entries">No entries found for today</string>
    <string name="hint_enter_name_exercise">Enter exercise name here</string>
    <string name="workout_plans">Plans</string>
    <string name="workout_routines">Routines</string>
    <string name="workout_exercises">Exercises</string>
    <string name="workout_sets">Sets</string>
    <string name="workout_reps">Repetitions</string>
    <string name="workout_weight">Weight (kg)</string>
    <string name="button_edit_plans">Edit Workout Plans</string>
    <string name="button_edit_routines">Add Routines</string>
    <string name="button_edit_exercises">Add Exercises</string>
    <string name="button_add_plans">Add Workout Plans</string>
    <string name="button_add_routines">Add Routines</string>
    <string name="button_add_routine">Add Workout Routine</string>
    <string name="button_add_exercises">Add Workout Exercises</string>
    <string name="button_create_plans">Create Workout Plans</string>
    <string name="button_create_plan">Create New Workout Plan</string>
    <string name="button_create_routines">Create Workout Routines</string>
    <string name="button_create_exercises">Create Workout Exercises</string>
    <string name="settings_lang">Language</string>
    <string name="settings_goals">Daily Goals</string>

    <string name="lang_de">German</string>
    <string name="lang_en">English</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_home">Home</string>
    <string name="menu_record">Record</string>
    <string name="menu_fitness">Fitness</string>
    <string name="unit">Cm</string>
    <string name="female_text">Female</string>
    <string name="age">Age</string>
    <string name="starting_height">170</string>
    <string name="starting_weight">55</string>
    <string name="starting_age">22</string>
    <string name="todo">TODO</string>
    <string name="height">Height</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="weight">Weight</string>
    <string name="male">Male</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="quote1">The only person you are destined to become is the person you decide to be.</string>
    <string name="quote2">Once you learn to quit, it becomes a habit.</string>
    <string name="quote3">A year from now you may wish you had started today.</string>
    <string name="quote4">Look in the mirror. That’s your competition.</string>
    <string name="quote5">A feeble body weakens the mind.</string>
    <string name="quote6">Put all excuses aside and remember this: You are capable.</string>
    <string name="quote7">Reading is to the mind what exercise is to the body.</string>
    <string name="quote8">Success is what comes after your stop making excuses.</string>
    <string name="quote9">The pain you feel today will be the strength you feel tomorrow.</string>
    <string name="quote10">A champion is someone who gets up when they can’t.</string>
    <string name="quote11">Get comfortable with being uncomfortable!</string>
    <string name="quote12">No pain, no gain.</string>
    <string name="pushup">Push-ups are a simple and effective body weight movement that can help increase strength in your upper body and core.</string>
    <string name="pullup">The pull-up is a closed-chain movement where the body is suspended by the hands and pulls up</string>
    <string name="squats">Strength exercise in which the trainee lowers their hips from a standing position and then stands back up</string>
    <string name="tplank">Inner core exercise which helps reduce body fat and increase core strength</string>
    <string name="dead_bug">The dead bug is a body weight exercise that targets your abdominal muscles.</string>
    <string name="skipping">User jumps avoiding the incoming rope to increase stamina and it serves as warmup</string>
    <string name="heavy_squats">Strength exercise of lower body done but using weights to improve legs,calf,thighs</string>
    <string name="split_jump">Split jumps are a pyrometric exercise that strengthen the gluts and leg muscles</string>
    <string name="virkshasana">Tree Pose is a balancing asana</string>
    <string name="cobrasana">Gentle backend practiced from a face-down position that warms and strengthens the spine while opening the chest</string>
    <string name="pranayama">The practice of pranayama involves breathing exercises and patterns.</string>
    <string name="yogasana">This asana is a meditation on determination and perseverance, as well as commitment.</string>
    <string name="utkatasana"> It is a strengthening and heat-building asana</string>
    <string name="tvmar">Calisthenics will be added soon. Don\'t forget to drink water and stay hydrated</string>

</resources>